--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+    font-family: 'Grotesque';
+    src: url("../../public/BasisGrotesquePro-Light.ttf") format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Grotesque';
+    src: url("../../public/BasisGrotesquePro-Regular.ttf") format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Grotesque';
+    src: url("../../public/BasisGrotesquePro-Bold.ttf") format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
